# info_projekt

./: CMakeLists.txt  README.md  bahnkurve.cpp  bahnkurve.hpp  boost.cpp  mainWurf.cpp  rootWurf.cpp  statischeDaten.cpp  statischeDaten.hpp  wurf.cpp  wurf_root.cpp
